# block-mesh-rs

./: Cargo.toml
src/: bounds.rs  greedy.rs  simple.rs
