[package]
name = "block-mesh"
description = "Fast algorithms for generating voxel block meshes from arrays."
version = "0.2.0"
repository = "https://github.com/bonsairobo/block-mesh-rs"
keywords = ["graphics", "mesh", "voxel"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
ilattice = { git = "https://github.com/co42/ilattice-rs.git", branch = "feat/bevy-0.14" }
ndshape = "0.3"
ndcopy = "0.3"
